objects/SCP_Alerts__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_for__c</fullName>
        <label>Notification for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Users</fullName>
                </value>
                <value>
                    <fullName>Partners Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>SCP Alert</label>
    <nameField>
        <label>SCP Alerts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCP Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>